using the bpy.ops.node.output_file_add_socket operator fails with an error #35068

Closed
opened 2013-04-24 18:27:28 +02:00 by Tamir Lousky · 5 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10, 3 bit
RAM: 2 GB
Processor: AMD Athlon(tm) 64 X2 Dual Core Processor 4200+ × 2

Graphics card:
NVIDIA Gefore 9600GT

- Blender version with error, and version that worked ---

2.66.1 (haven't tried other versions)

- Short description of error ---

Using the bpy.ops.node.output_file_add_socket operator through python fails,
the method returns a {'CANCELLED'} value and an error:
RuntimeError: class RENDER_OT_add_file_out_socket, function execute: incompatible return value , str(, Function.result expected a set, not a NoneType)

Even when used in the correct context ( in the node editor, file output node selected and active )

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached blendfile,
run the registered script( "Text" )
In the tools menu of the node editor, press the button.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10, 3 bit RAM: 2 GB Processor: AMD Athlon(tm) 64 X2 Dual Core Processor 4200+ × 2 Graphics card: NVIDIA Gefore 9600GT - Blender version with error, and version that worked --- 2.66.1 (haven't tried other versions) - Short description of error --- Using the bpy.ops.node.output_file_add_socket operator through python fails, the method returns a {'CANCELLED'} value and an error: RuntimeError: class RENDER_OT_add_file_out_socket, function execute: incompatible return value , str(, Function.result expected a set, not a NoneType) Even when used in the correct context ( in the node editor, file output node selected and active ) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached blendfile, run the registered script( "Text" ) In the tools menu of the node editor, press the button. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The error is because you don't have "return {'FINISHED'}" at the end of your execute() function.

I can fix the the operator being cancelled though.%%%

%%%The error is because you don't have "return {'FINISHED'}" at the end of your execute() function. I can fix the the operator being cancelled though.%%%

%%%Fix in svn now, thanks for the report.%%%

%%%Fix in svn now, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Awesome, so fast!

Thanks a lot,
and thanks for the tip about the "FINISHED" at the end of the execute function,
really forgot about that one.%%%

%%%Awesome, so fast! Thanks a lot, and thanks for the tip about the "FINISHED" at the end of the execute function, really forgot about that one.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35068
No description provided.