Fix #35068: bpy.ops.node.output_file_add_socket() now works on the active node if there is no "node" in the context, for scripting convenience.